# diesel_study

./: Cargo.toml
example/test1/: Cargo.toml  test.sqlite
example/test1/src/: main.rs
migrations/2024-08-14-1/: up.sql
src/: error.rs  lib.rs  pool.rs
