[package]
name = "diesel_study"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel ={ version = "2.2.2",  features = ["sqlite", "r2d2"]}
diesel_derives = { version = "2.2.2", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }


thiserror = "1.0"
lazy_static = "*"